# Change Log
[Chili Bullet Weapons](https://github.com/Iunius118/ChiliBulletWeapons#readme).
[Source](https://github.com/Iunius118/ChiliBulletWeapons).

## [Unreleased]

## [1.0.1]
- Require Minecraft 1.20.2+ and Forge.

### Fixed
- Fix loot table addition so that short grass can drop curved chili pepper in 1.20.3+.

## [1.0.0]
- Initial public release.
- Require Minecraft 1.20.2 and Forge 48.1.0.