@@ -14,7 +14,7 @@ mapping_version=1.20.2
 mod_id=chilibulletweapons
 mod_name=Chili Bullet Weapons
 mod_license=MIT License
-mod_version=1.0.1
+mod_version=1.1.0-dev
 mod_group_id=com.github.iunius118.chilibulletweapons
 mod_update_url=
 mod_url=https://github.com/Iunius118/ChiliBulletWeapons
