@@ -1,0 +1,4 @@
+// 1.20.2	2024-02-13T12:53:54.3214413	Global Loot Modifiers : chilibulletweapons
+68ebe33ba934a4b8a73240bf53d25686fcac5772 data/chilibulletweapons/loot_modifiers/curved_chili.json
+e4f61f5a0ae028015bcecd927b0c5ce58329829d data/chilibulletweapons/loot_modifiers/curved_chili_1203.json
+54460e615dc33a40c5d0aed6a1d09a809658b8d2 data/forge/loot_modifiers/global_loot_modifiers.json
