@@ -1,0 +1,14 @@
+{
+  "type": "chilibulletweapons:curved_chili_loot_modifier",
+  "conditions": [
+    {
+      "condition": "forge:loot_table_id",
+      "loot_table_id": "minecraft:blocks/short_grass"
+    },
+    {
+      "chance": 0.125,
+      "condition": "minecraft:random_chance"
+    }
+  ],
+  "count": 1
+}
