@@ -1,0 +1,7 @@
+{
+  "entries": [
+    "chilibulletweapons:curved_chili_1203",
+    "chilibulletweapons:curved_chili"
+  ],
+  "replace": false
+}
