@@ -3,6 +3,11 @@
 [Source](https://github.com/Iunius118/ChiliBulletWeapons).
 
 ## [Unreleased]
+### Added
+- Loot modifiers to drop curved chili pepper
+
+### Changed
+- Use global loot modifiers to drop curved chili pepper.
 
 ## [1.0.1]
 - Require Minecraft 1.20.2+ and Forge.
